# create_foldable_github_code_block

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: clipboard.rs  cmd.rs  git.rs  lib.rs  main.rs  markdown.rs
