[package]
name = "create_foldable_github_code_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
arboard = "3.3.0"
